Fix uploads; add exception classes; other fixes
* Do not send empty layout ("") for new pages
* Use application/x-www-form-urlencoded for template create requests
* Do not handle tag_list on files as it's not part of the API anymore
* Add an Exception hierarchy
* Refer to the API using its official name Developer Portal API instead of Content Management API
* Remove distinction between ErrorHash and plain Error objects in OpenAPI doc

Resolves FwMotion#99
Resolves FwMotion#16